    security hole, as record #1 is visible using this. erase it if
    you don't need it)
  - po/freemed.pot: updated po template with changes from modules
  - doc/TRANSLATION-HOWTO: added gettext howto
  - lib/freemed.php: supposedly fixed Lynx caching problem
  NOTE: FreeMED's database structures, especially the core EMR, are
    going to be changing *rapidly* after this release.

* Thu Jun 21 2001 rufustfirefly
  - modules/cpt.db.module.php: form() action fixed, needed to have
    a reset() call before while(each(GLOBALS)), used foreach(GLOBALS)
    instead

* Wed Jun 20 2001 rufustfirefly
  - modules/provider.db.module.php: fix in modification of phone #
    fields (David Jordan)
  - lib/API.php: fix for search box not passing $module

* Fri Jun 15 2001 gdrago23
  - admin.php, authenticate.php, billing_functions.php,
    book_appointment.php, calendar.php, call-in.php,
    custom_records.php, db_maintenance.php, export.php, help.php, 
    import.php, main.php, manage.php: removed STDFONT_{B,E}     
  - note for the future: <B>foo</B> should become <EM>foo</EM> 
  - note for the future: <FONT>foo</FONT> should be in the CSS.

* Thu Jun 14 2001 rufustfirefly
  - general include -> include_once overhaul for many modules,
    but never enough
  - lib/xml.php: working on EMR generation code; more of the record
    is being generated
  - lang/registry: added spanish and german to language registry
  - index.php: fixed language registry read
  - module*.php: include -> include_once

* Wed Jun 13 2001 rufustfirefly
  - TODO: updated todo list to be a little bit more current
  - doc/MODULE_API: added initial modular API documentation
  - lib/xml.php: implemented skeletal XML creation
  - NOTE - The next CVS release will most likely be the last CVS
    release before 0.2.2 (or 0.3, depending on the XML EMR status)
  - lib/freemed.php: updated version number to 0.2.1.3, set
    tentative name to "Bread and Butter" for next release

* Mon Jun 11 2001 rufustfirefly